# ai_system_for_search_by_oem

./: ReadME.md  pyproject.toml
src/: .env  main.py
src/core/: config.py
src/templates/: finded.html  start.html
src/utils/: classes.py  get_mail.py  insert_table.py  pplxty_search_api.py  request_in_ds.py  search_by_xls.py  sender_mailer.py  table_read.py  xml_search_google.py
src/utils/test_cases/: test1.csv  test_case.xlsx
